results/SVCOMP/conversational/log-ExSymExeArrays-2024_03_12_05_28_04.txt
class Main {
    static int[] a;

    //@ ensures \result ==> a != null && a.length == 1 && a[0] == x;
    //@ ensures !\result ==> a == null || a.length != 1 || a[0] != x;
    public static boolean f() {
        a = new int[1];
        int x = -3;

        Main inst = new Main();

        return inst.test(x);
    }

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == x ==> !\result;
    //@ ensures a[0] != x ==> \result;
    public boolean test(int x) {
        a[0] = x;
        if (a[0] >= 0) {
            return false;
        } else {
            System.out.println("branch2 <0");
            return true;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result ==> a != null && a.length == 1 && a[0] == x;
                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result ==> a != null && a.length == 1 && a[0] == x;
                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result ==> a != null && a.length == 1 && a[0] == x;
                                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:4: error: cannot find symbol
    //@ ensures \result ==> a != null && a.length == 1 && a[0] == x;
                                                                  ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures !\result ==> a == null || a.length != 1 || a[0] != x;
                             ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures !\result ==> a == null || a.length != 1 || a[0] != x;
                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures !\result ==> a == null || a.length != 1 || a[0] != x;
                                                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:5: error: cannot find symbol
    //@ ensures !\result ==> a == null || a.length != 1 || a[0] != x;
                                                                   ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:15: error: An identifier with package visibility may not be used in a requires clause with public visibility
    //@ requires a != null && a.length == 1;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:15: error: An identifier with package visibility may not be used in a requires clause with public visibility
    //@ requires a != null && a.length == 1;
                              ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:16: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures a[0] == x ==> !\result;
                ^
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:17: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures a[0] != x ==> \result;
                ^
12 errors

class Main {
    spec_public static int[] a;

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == x ==> !\result;
    //@ ensures a[0] != x ==> \result;
    public static boolean f() {
        a = new int[1];
        int x = -3;

        Main inst = new Main();

        return inst.test(x);
    }

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == x ==> !\result;
    //@ ensures a[0] != x ==> \result;
    public boolean test(int x) {
        a[0] = x;
        if (a[0] >= 0) {
            return false;
        } else {
            System.out.println("branch2 <0");
            return true;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:2: error: <identifier> expected
    spec_public static int[] a;
               ^
1 error

class Main {
    //@ spec_public
    static int[] a;

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == x ==> !\result;
    //@ ensures a[0] != x ==> \result;
    public static boolean f() {
        a = new int[1];
        int x = -3;

        Main inst = new Main();

        return inst.test(x);
    }

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == x ==> !\result;
    //@ ensures a[0] != x ==> \result;
    public boolean test(int x) {
        a[0] = x;
        if (a[0] >= 0) {
            return false;
        } else {
            System.out.println("branch2 <0");
            return true;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:6: error: cannot find symbol
    //@ ensures a[0] == x ==> !\result;
                        ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:7: error: cannot find symbol
    //@ ensures a[0] != x ==> \result;
                        ^
  symbol:   variable x
  location: class Main
2 errors

class Main {
    //@ spec_public
    static int[] a;

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == x ==> !\result;
    //@ ensures a[0] != x ==> \result;
    public static boolean f() {
        a = new int[1];
        int x = -3;

        Main inst = new Main();

        return inst.test(x);
    }

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == x ==> !\result;
    //@ ensures a[0] != x ==> \result;
    public boolean test(int x) {
        a[0] = x;
        if (a[0] >= 0) {
            return false;
        } else {
            System.out.println("branch2 <0");
            return true;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:6: error: cannot find symbol
    //@ ensures a[0] == x ==> !\result;
                        ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeArrays.java:7: error: cannot find symbol
    //@ ensures a[0] != x ==> \result;
                        ^
  symbol:   variable x
  location: class Main
2 errors

class Main {
    //@ spec_public
    static int[] a;

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == -3 ==> !\result;
    //@ ensures a[0] != -3 ==> \result;
    public static boolean f() {
        a = new int[1];
        int x = -3;

        Main inst = new Main();

        return inst.test(x);
    }

    //@ requires a != null && a.length == 1;
    //@ ensures a[0] == -3 ==> !\result;
    //@ ensures a[0] != -3 ==> \result;
    public boolean test(int x) {
        a[0] = x;
        if (a[0] >= 0) {
            return false;
        } else {
            System.out.println("branch2 <0");
            return true;
        }
    }
}
